--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SECRET_KEY=django-insecure-8(+6ey(k5wt+8+6%l*08q%omi)81)b)a@gwya#*2twmn!n$2zl
-FIELD_ENCRYPTION_KEY=aVVcqnE88CV1oCDq0IWzXT78GR2tiM0_99_5LJQA1to=
+SECRET_KEY=8-!*@7%uwq-5h9=j=qzz@x@)8^b)%a*vj&z%_sghzg$&jhs4sj
+FERNET_SECRET_KEY=bLP-J81cp_Us8kkf_Juz-5_nZnvoCfwHpls7b8TAt7c=
