--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==5.2.1
 django-appconf==1.1.0
 django-cryptography==1.1
 django-debug-toolbar==5.2.0
+django-widget-tweaks==1.5.0
 djangorestframework==3.16.0
 pycparser==2.22
 python-dateutil==2.9.0.post0
