--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
-/venv
-venv
-.envp
-*.sqlite3
+# Python
 __pycache__/
 *.pyc
 *.pyo
+*.pyd
+
+# Virtualenv
+venv/
+.env
+
+# Django
+db.sqlite3
 logs/
-*.log
+media/
+
+# OS
 .DS_Store
-*.swp
-*.bak
-requirements.txt~
